--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
+    <link href="{% static 'css/list_view_modern.css' %}" rel="stylesheet">
+    <link href="{% static 'css/kardex_advanced.css' %}" rel="stylesheet">
+    <!-- Kama Datepicker CSS -->
+    <link href="https://unpkg.com/kamadatepicker@latest/dist/kamadatepicker.min.css" rel="stylesheet">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
@@ -133,6 +137,8 @@
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Kama Datepicker JS -->
+    <script src="https://unpkg.com/kamadatepicker@latest/dist/kamadatepicker.min.js"></script>
     <!-- Custom JS -->
     <script src="{% static 'js/main.js' %}"></script>
     {% block extra_js %}{% endblock %}
